# switch_command_inserter

./: .gitignore  CMakeLists.txt  README.md
docs/: build_from_source.md  changes  commit.md  identify.md  known_issues  main.md  scan.md  script.md
include/: CWRconfigs.hpp  CommandsCommiterSSH.hpp  SSHSession.hpp  TELNETSession.hpp  database.hpp  host.hpp  identifyRegex.hpp  identifyRegexT.hpp  logging.hpp  main.hpp  nameDefinition.hpp
libs/: CMakeLists.txt
src/: CMakeLists.txt  examples.cpp  main.cpp
src/classes/: CWRconfigs.cpp  SSHSession.cpp  TELNETSession.cpp  database.cpp  identifyRegex.cpp  identifyRegexT.cpp  logging.cpp
src/modules/: initVars.cpp  parseIpMaskToIpPool.cpp  rootCallFunctions.cpp  scanNetwork.cpp
